test/libsolidity/syntaxTests/nameAndTypeResolution/061_missing_base_constructor_arguments.sol
contract A { constructor(uint a) { } }
contract B is A { }
// ----
// TypeError: (46-65): Contract "B" should be marked as abstract.
